# api

./: .env  .gitignore  Cargo.toml  Rocket.toml  maintenance.html  readme.md
sql/: structure.sql
src/: lib.rs  main.rs  markers.rs  structs.rs
src/catchers/: mod.rs
src/fairings/: mod.rs
src/guards/: maintenance_mode.rs  mod.rs  static_files.rs
src/markers/: mod.rs
src/routes/: api.rs  mod.rs  positionstack.rs  root.rs
src/users/: login.rs  register.rs
static/: index.html
