[package]
name = "somsiad-api"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0"
authors = [ "Marcin Mikuła <marcinmikula840@gmail.com>", "Piotr Jakóbczyk", "Piotr Skóra", "Marcel Maciaszczyk", "Jakub Jastrząb" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_mysql", "sqlx_macros"] }
serde = { version = "1.0.145", features = [ "derive" ] }
bcrypt = "0.13.0"
nanoid = "0.4.0"
lettre = { version = "0.10.1", features = [ "tokio1-native-tls", "tokio1", "sendmail-transport", "serde" ] }
anyhow = "1.0.51"
